css fix for footer in search on mobile

--- a/phone_0.css
+++ b/phone_0.css
@@ -526,7 +526,7 @@ a.index_link:hover {
     box-sizing: border-box;
     width: 100%;
     font-size: 2.5vw;
-    padding: 3%;
+    padding: 1%;
     background-color: white;
 }
 
